# SaaSForge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  jobs.py  observability.py
app/admin/: routes.py
app/analytics/: routes.py
app/api/: routes.py
app/auth/: routes.py
app/billing/: routes.py
app/core/: cli.py  config.py  context_processors.py  error_handlers.py  extensions.py  local_config.py  models.py  routes.py
app/db/: __init__.py
app/knowledge/: __init__.py  api.py  jobs.py  models.py  routes.py  services.py
app/notifications/: routes.py
app/organizations/: routes.py
app/security/: routes.py
app/services/: analytics_service.py  api_platform.py  audit_service.py  auth_service.py  base.py  billing_service.py  business_metrics.py  cache_service.py  decorators.py  demo_service.py  email_service.py  entitlement_service.py  impersonation_service.py  job_scheduler.py  notification_service.py  org_service.py  performance_service.py  role_service.py  session_service.py  two_factor_service.py  webhook_service.py
app/templates/: base.html  dashboard.html  landing.html  sessions.html  settings.html  two_factor_setup.html
docker/: nginx.conf
docs/: api.md  architecture.md  case-study.md  deployment.md  development.md  diagrams.md  platform-reuse.md  positioning.md  product-architecture.md
docs/adr/: index.md
migrations/: env.py
tests/: conftest.py
(+81 files in other folders)
